--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "master-dev",
         "fakerphp/faker": "^1.9.1",
+        "league/flysystem": "^1.0.",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^9.3"
     },
