--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=Lumen
+APP_NAME=Facebook_redirect
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -8,12 +8,8 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=/path/to/db_file/redirect.sqlite
+DB_FOREIGN_KEYS=true
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
