--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": "^7.3|^8.0",
+        "ext-sqlite3": "*",
         "laravel/lumen-framework": "^8.0"
     },
     "require-dev": {
