create database tables migrations

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ APP_TIMEZONE=UTC
 LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
+DB_CONNECTION=sqlite
 DB_DATABASE=/path/to/db_file/redirect.sqlite
 DB_FOREIGN_KEYS=true
 
